Wild flowers + Change Path stairs and slabs

--- a/src/main/resources/assets/minecraft/lang/en_us.json
+++ b/src/main/resources/assets/minecraft/lang/en_us.json
@@ -43,6 +43,7 @@
   "block.minecraft.resin_clump": "Resin Clump",
   "block.minecraft.path_stairs": "Dirt Path Stairs",
   "block.minecraft.path_slab": "Dirt Path Slab",
+  "block.minecraft.wildflowers": "Wildflowers",
 
   "item.minecraft.pale_oak_boat": "Pale Oak Boat",
   "item.minecraft.pale_oak_chest_boat": "Pale Oak Boat with Chest",
